bug fix with new/old id in main graph

--- a/Input files and photos/TWO_TASK_LEFT_ERR/example.ini
+++ b/Input files and photos/TWO_TASK_LEFT_ERR/example.ini
@@ -1,5 +1,5 @@
 [INIT_DATA]
-task_crashed_id = 4
+task_crashed_id = 0
 crashed_part_of_task = 0
 mf_period = 100
 fixator_time = 1
@@ -7,10 +7,10 @@ fixator_time = 1
 [GRAPH_VERTEX]
 quantity = 22
 messages = []
-duration = [6, 5, 6, 5, 6, 5, 3, 5, 6, 5, 6, 5, 7, 3, 4, 1, 7, 4, 1, 7, 2, 2]
+duration = [8, 8, 7, 7, 3, 1, 3, 5, 6, 5, 6, 5, 7, 3, 4, 1, 7, 4, 1, 7, 2, 2]
 
 [MAP_PARTITION_TASK]
-dict = {0: (0, 1, 2,), 1: (3, 4, 5,), }
+dict = {0: (0,), 1: (1,), }
 
 [MAP_WINDOW_PARTITION]
 dict = {(0, 20): 0, (20, 40): 1, }
