--- a/example.ini
+++ b/example.ini
@@ -6,12 +6,12 @@ fixator_time = 1
 
 [GRAPH_VERTEX]
 quantity = 22
-messages = [[2, 0]]
-duration = [8, 8, 7, 7, 3, 1, 3, 5, 6, 5, 6, 5, 7, 3, 4, 1, 7, 4, 1, 7, 2, 2]
+messages = []
+duration = [8, 8, 8, 5, 3, 4, 4, 5, 5, 4, 7, 3, 1, 3, 5, 2, 4, 5, 2, 7, 6, 1]
 
 [MAP_PARTITION_TASK]
-dict = {0: (0, 1, 2), 1: (3, 4, 5), 2: (6, 7, 8)}
+dict = {0: (0, 1, 2), 1: (3, 4, 5), 2: (6, 7, 8, 9, 10)}
 
 [MAP_WINDOW_PARTITION]
-dict = {(0, 20): 0, (20, 40): 1, (40, 80): 2, (80, 100): 0}
+dict = {(0, 20): 0, (20, 40): 0, (40, 80): 2, (80, 100): 1}
 
