--- a/example.ini
+++ b/example.ini
@@ -1,5 +1,5 @@
 [INIT_DATA]
-task_crashed_id = 0
+task_crashed_id = 2
 crashed_part_of_task = 0
 mf_period = 100
 fixator_time = 1
@@ -7,11 +7,11 @@ fixator_time = 1
 [GRAPH_VERTEX]
 quantity = 22
 messages = []
-duration = [8, 8, 8, 5, 3, 4, 4, 5, 5, 4, 7, 3, 1, 3, 5, 2, 4, 5, 2, 7, 6, 1]
+duration = [8, 8, 3, 5, 3, 5, 4, 5, 5, 4, 7, 3, 3, 3, 5, 2, 4, 5, 2, 7, 6, 1]
 
 [MAP_PARTITION_TASK]
-dict = {0: (0, 1, 2), 1: (3, 4, 5), 2: (6, 7, 8, 9, 10)}
+dict = {0: (0, 1, 2), 1: (3, 4, 5), }
 
 [MAP_WINDOW_PARTITION]
-dict = {(0, 20): 0, (20, 40): 0, (40, 80): 2, (80, 100): 1}
+dict = {(0, 20): 0, (20, 40): 1, }
 
